# fiisubot

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  extract_songs.py  fiisubot.py  pyproject.toml  test_integration.py  test_todo_filter.py
.github/workflows/: ci.yml
fiisut-svelte/: package-lock.json  package.json  svelte.config.js
fiisut-svelte/scripts/: create_index.js
fiisut-svelte/src/lib/: InfiniteScroll.svelte  MyInfiniteScroll.svelte  MyInfiniteScroll2.svelte  MyInfiniteScrollParent.svelte  Spinner.svelte  lauluwiki.json  lauluwiki_lunr_idx.json  songs.json
fiisut-svelte/src/routes/: index.svelte  index.svelte.bak
song_collections/: README.md  extract.sh
src/: main.rs
src/indexer/: main.rs
tools/: extract_songs.py
