[package]
name = "fiisut_tg"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
milli = { git = "https://github.com/meilisearch/milli.git", tag = "v0.29.3" }
anyhow = "1.0.57"
serde_json = "1.0.81"
teloxide = { version = "0.9.2", default-features = false, features = [
  "auto-send",
  "ctrlc_handler",
  "rustls",
  "macros"
] }
tokio =  { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.137"
lazy_static = "1.4.0"

[[bin]]
name = "index-builder"
path = "src/indexer/main.rs"
