[tool.poetry]
name = "fiisut-tg"
version = "0.1.0"
description = ""
authors = ["Jaakko Sirén <Jaakko.Siren@pm.me>"]
license = "MIT for code, all copyrights held for songs"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.0"
TexSoup = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pylint = "^2.13.9"
ipykernel = "^6.13.0"
TexSoup = "^0.3.1"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
extract-fiisut = {script="tools.extract_songs:main"}